Profil detay sayfası yapıldı postcard grid spacing bugı fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -579,7 +579,7 @@ header {
     background-color: #FFFFFF;
     align-items: flex-start;
     height: auto;
-    min-width: fit-content;
+    min-width: min-content;
 }
 
 .postcards {
@@ -1840,14 +1840,22 @@ header {
     z-index: 4;
     display: flex;
     flex-direction: column;
-
     width: 100%;
-    height: 175vh;
+    height: 550px;
 }
 
-.profile-container .profile-bg-photo img{
+.profile-container .profile-bg-photo{
+    display: flex;
+    justify-content: center;
+    position: absolute;
     width: 100%;
-    height:fit-content;
+    height: 350px;
+    top: 0;
+    right: 0;
+}
+.profile-container .profile-bg-photo img{
+    width: 1650px;
+    height: auto;
     position: absolute;
 }
 .profile-container .profile-photo{
@@ -1879,7 +1887,7 @@ header {
     align-items: flex-end;
     position: relative;
     padding: 0 75px;
-    top: 320px;
+    top: 300px;
 }
 
 .profile-container .profile-box-inclusive{
@@ -1944,4 +1952,56 @@ header {
 }
 .profile-container .profile-title .followers-info::after{
     content: " ";
+}
+
+.posts-section{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.post-tab-menu{
+    display: flex; 
+    width: 500px;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 40px;
+    border-bottom: 1.5px solid #D9D9D9;
+}
+.post-tab-menu > div{
+    display: flex; 
+    flex-direction: row;
+    gap: 15px;
+}
+
+.post-tab-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 135px;
+    height: 50px;
+    border: 1.5px solid #D9D9D9;
+    border-bottom: 0;
+    border-radius: 12px 12px 0 0;
+    background: rgba(128, 30, 92, 0.04);
+    color: #801E5C;
+    font-weight: 400;   
+    font-size: 24px;
+}
+.post-tab-input{
+    display: none;
+    visibility: hidden;
+}
+.post-tab-input:checked + label > .post-tab-button{
+    background-color: #FFFFFF   ;
+}
+.post-tab-input:checked + label::after{
+    content: "";
+    display: flex;
+    position: absolute;
+    margin-left: 1.5px;
+    width: 133px;
+    height: 1.5px;
+    background-color: #FFFFFF;
+
 }
